@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/plugins.c: don't remove/free removed/freed objects, log mistake. This closes
+ bug #1670465: server doesn't have check to see if it is removing removed
+Ryo 2007-03-04
+
 Fix some potential / real crashes under Windows.
  common/readable.c: wrong field cleared. Set to NULL after clear. Wrong buffer size.
 ---
